2004-03-30  Miguel Sofer <msofer@users.sf.net>

	* generic/tclCompile.c:     New instruction code INST_START_CMD
	* generic/tclCompile.h:     that allows checking the bytecode's  
	* generic/tclExecute.c:     validity [Bug 729692] and the interp's  
	* tests/interp.test (18.9): readyness [Bug 495830] before running 
	* tests/proc.test (7.1):    the command. It also changes the 
	* tests/rename.test (6.1):  mechanics of the async tests in TEBC, 		   	 
	doing it now at command start instead of every 16 instructions.

2004-03-30  Vince Darley  <vincentdarley@users.sourceforge.net>

        * generic/tclFileName.c:  Fix to Windows glob where the pattern is
        * generic/tclIOUtil.c:    a volume relative path or a network
        * tests/fileName.test:    share [Bug 898238]. On windows 'glob'
        * tests/fileSystem.test:  will now return the results of 
        'glob /foo/bar' and 'glob \\foo\\bar' as 'C:/foo/bar', i.e. a 
        correct absolute path (rather than a volume relative path).

        Note that the test suite does not test commands like 
        'glob //Machine/Shared/*' (on a network share).  

2004-03-30  Vince Darley  <vincentdarley@users.sourceforge.net>

        * generic/tclPathObj.c:   Fix to filename bugs recently
        * tests/fileName.test:    introduced [Bug 918320].

2004-03-29  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclMain.c (Tcl_Main, StdinProc):	Append newline only
	* tests/basic.test (basic-46.1):		to incomplete scripts
	as part of multi-line script construction.  Do not add an extra
	trailing newline to the complete script.  [Bug 833150]

2004-03-28  Miguel Sofer <msofer@users.sf.net>

	* generic/tclCompile.c (TclCompileScript): corrected possible
	segfault when a compilation returns TCL_OUTLINE_COMPILE after
	having grown the compile environment [Bug 925121].

2004-03-27  Miguel Sofer <msofer@users.sf.net>

	* doc/array.n: added documentation for trace-realted behaviour of
	'array get' [Bug 449893]
